# Pokemon-Battle-Simulator

./: .gitattributes  .gitignore  API.cpp  Battle.cpp  Battle.h  Battle_old.cpp  CMakeLists.txt  Move.cpp  Pokemon.cpp  Pokemon.h  README.md  TEAM_VALIDATION_ENHANCEMENTS.md  Team.cpp  Team.h  basic-memory.md  debug_test  debug_test.cpp  game_demo  game_demo.cpp  main.cpp  run_game.sh  test_validation.sh  test_weather.sh  weather_demo.sh  working_battle  working_battle.cpp
API/: API.py  API2.py  MovesData.py  simPoke.py
Moves/: 1.json  2.json  3.json  4.json  abra.json  aerodactyl.json  air-slash.json  alakazam.json  amnesia.json  arbok.json  arcanine.json  articuno.json  beedrill.json  bellsprout.json  blastoise.json  bulbasaur.json  butterfree.json  caterpie.json  chansey.json  charizard.json  charmander.json  charmeleon.json  clefable.json  clefairy.json  cloyster.json  cubone.json  dewgong.json  diglett.json  ditto.json  dodrio.json  doduo.json  dragon-pulse.json  dragonair.json  dragonite.json  dratini.json  drowzee.json  dugtrio.json  eevee.json  ekans.json  electabuzz.json  (+124 more)
Moves_Data/: absorb.json  acid-armor.json  acid.json  acupressure.json  aerial-ace.json  agility.json  air-cutter.json  air-slash.json  ancient-power.json  aqua-jet.json  astonish.json  aura-sphere.json  aurora-beam.json  avalanche.json  barrier.json  belly-drum.json  bind.json  blaze-kick.json  blizzard.json  block.json  body-slam.json  bone-club.json  bonemerang.json  bubble-beam.json  bubble.json  bug-bite.json  bullet-seed.json  calm-mind.json  captivate.json  clamp.json  close-combat.json  comet-punch.json  confuse-ray.json  confusion.json  conversion-2.json  conversion.json  cosmic-power.json  covet.json  cross-chop.json  cross-poison.json  (+179 more)
Pokemon/: 10.json  101.json  111.json  114.json  122.json  123.json  125.json  126.json  13.json  130.json  133.json  134.json  135.json  137.json  143.json  148.json  16.json  19.json  2.json  23.json  24.json  30.json  35.json  38.json  40.json  42.json  44.json  47.json  49.json  5.json  51.json  54.json  55.json  59.json  6.json  61.json  63.json  65.json  69.json  72.json  (+25 more)
Pokemon1/: 112.json  113.json  129.json  26.json  35.json  36.json  37.json  41.json  46.json  63.json  65.json  67.json  73.json  77.json  81.json  92.json
Pokemon2/: 1.json  100.json  116.json  120.json  122.json  131.json  132.json  133.json  137.json  14.json  150.json  151.json  17.json  18.json  21.json  22.json  29.json  3.json  31.json  32.json  33.json  4.json  47.json  48.json  55.json  60.json  66.json  67.json  68.json  70.json  74.json  76.json  77.json  78.json  83.json  85.json  89.json  96.json  aerodactyl.json  articuno.json  (+50 more)
Read/: Plan.md
Teams/: Team-1.json
data/moves/: absorb.json  aqua-ring.json  aqua-tail.json  aromatherapy.json  assurance.json  barrage.json  baton-pass.json  bite.json  bone-rush.json  bounce.json  brick-break.json  brine.json  bug-buzz.json  bullet-punch.json  camouflage.json  charge-beam.json  charge.json  constrict.json  copycat.json  counter.json  crabhammer.json  crush-claw.json  curse.json  destiny-bond.json  detect.json  discharge.json  double-hit.json  double-slap.json  double-team.json  dragon-rage.json  dragon-rush.json  dynamic-punch.json  earthquake.json  egg-bomb.json  extreme-speed.json  fake-out.json  false-swipe.json  feint-attack.json  fire-blast.json  fire-fang.json  (+112 more)
data/pokemon/: aerodactyl.json  bulbasaur.json  clefable.json  cubone.json  dragonite.json  exeggutor.json  flareon.json  gastly.json  goldeen.json  growlithe.json  kangaskhan.json  krabby.json  magikarp.json  marowak.json  metapod.json  nidoking.json  omanyte.json  omastar.json  onix.json  raichu.json  raticate.json  rhydon.json  seadra.json  seaking.json  slowbro.json  snorlax.json  tangela.json  tauros.json  testmon2.json  vaporeon.json  victreebel.json  weezing.json
data/teams/: Team-1.json  Team-2.json  Team-3.json  battle_history.json
data/tournaments/: example_tournament_progress.json  gym_strategies.json  tournament_config.json
docs/: CHANGELOG_ENTRY.md  EXPERT_AI_ENHANCEMENT_SPEC.md  IMPROVEMENTS.md  MULTI_TURN_MOVE_SYSTEM_DEVELOPER_GUIDE.md  MULTI_TURN_MOVE_SYSTEM_IMPLEMENTATION_SUMMARY.md  MULTI_TURN_MOVE_SYSTEM_TECHNICAL_DOCUMENTATION.md  MULTI_TURN_MOVE_SYSTEM_USER_GUIDE.md  PR_DESCRIPTION.md  TEAM_BUILDER_PHASE4_TECHNICAL_DOCUMENTATION.md  ai_expert_notes.md  basic-memory.md
examples/: ai-demo.cpp  battle_events_demo.cpp  debug-test.cpp  game-demo.cpp  team_builder_demo.cpp  working-battle.cpp
include/ai/: ai_strategy.h  medium_ai.h
include/core/: battle.h  battle_events.h  championship_system.h  gym_leader.h  move.h  pokemon.h  pokemon_data.h  team_builder.h  tournament_manager.h  weather.h
include/utils/: health_bar_animator.h  health_bar_event_listener.h  input_validator.h  input_validator_templates.hpp  move_type_mapping.h  type_effectiveness.h
src/: Move.cpp  Pokemon.cpp  Team.cpp  ai_factory.h  ai_strategy.cpp  ai_strategy.h  battle.cpp  battle.h  easy_ai.cpp  easy_ai.h  expert_ai.cpp  expert_ai.h  hard_ai.cpp  hard_ai.h  main.cpp  medium_ai.cpp  move.cpp  move.h  move_type_mapping.cpp  move_type_mapping.h  pokemon.cpp  pokemon.h  team.cpp  team.h  type_effectiveness.cpp  type_effectiveness.h  weather.cpp  weather.h
src/ai/: ai_factory.cpp  expert_ai.cpp  hard_ai.cpp  medium_ai.cpp
src/core/: battle.cpp  battle_events.cpp  championship_system.cpp  gym_leader.cpp  move.cpp  pokemon.cpp  pokemon_data.cpp  team.cpp  (+2 more)
tests/: CMakeLists.txt
tests/data/moves/: testmove.json
tests/data/pokemon/: testmon.json  testmon1.json  testmon3.json  testmona.json  testmonb.json  testmonc.json
tests/integration/: test_full_battle.cpp  test_status_integration.cpp  test_weather_integration.cpp
tests/unit/: test_ai.cpp  test_battle.cpp  test_easy_ai.cpp  test_expert_ai.cpp  test_hard_ai.cpp  test_input_validator.cpp  test_medium_ai.cpp  test_move.cpp  test_paralysis_determinism.cpp  test_pokemon.cpp  test_team.cpp  test_team_builder_phase4.cpp  test_type_effectiveness.cpp  test_weather.cpp
tests/utils/: test_utils.cpp  test_utils.h
(+19 files in other folders)
